--- a/arch/arm64/boot/dts/sprd/reserved-memory/cancun-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/reserved-memory/cancun-overlay.dtsi
@@ -21,6 +21,12 @@
 
 // SPDX-License-Identifier: (GPL-2.0+ OR MIT)
 &reserved_memory {
+
+	/*Increase support for protected_heap*/
+	protected_reserved: protected-mem@80003000 {
+		reg = <0x0 0x80003000 0x0 0x00002000>;
+	};
+
 	oemcrypto_reserved: oemcrypto@b6100000 {
 		reg = <0x0 0xb6100000 0x0 0x01100000>;
 	};
