--- a/arch/arm64/boot/dts/sprd/lion-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/lion-overlay.dts
@@ -89,12 +89,12 @@
 
 			fpc1020 {
 				status = "ok";
-				compatible = "fpc,fpc1553";
-				fpc,irq_gpio = <&eic_async 29 0x0>;
-				fpc,rst_gpio = <&ap_gpio 169 0x0>;
-				fpc,power_ctl_gpio= <&ap_gpio 56 0x0>;
+				compatible = "fpc,fpc1020";
+				fpc_irq = <&eic_async 29 0x0>;
+				fpc_rst = <&ap_gpio 169 0x0>;
+				fpc_vdd = <&ap_gpio 56 0x0>;
 				interrupt-parent = <&eic_async>;
-				interrupts = <29 IRQ_TYPE_EDGE_RISING>;
+				interrupts = <29 IRQ_TYPE_EDGE_RISING 29 0>;
 				/* vfp-supply = <&pm8994_l18>; */ // use regulator power
 			};
 
