[issue][charge][EKissue-1516] charge bringup 3/3
[rootcause]: need
[solution]: charge bringup
[sideeffect]: None
[others]:None

Change-Id: Ie52dde8189ffd41b1df1452752b450f660d3a074

--- a/drivers/power/supply/Kconfig
+++ b/drivers/power/supply/Kconfig
@@ -968,6 +968,13 @@ config CHARGER_UPM6920
 
           Say Y to include support for UPM Upm6920 Battery Charger.
 
+config CHARGER_SC89890
+         tristate "Spreadtrum SC89890 charger driver"
+         depends on MFD_SC27XX_PMIC || COMPILE_TEST
+         help
+          Say Y here to enable support for battery charging with SC89890
+          PMIC chips.
+
 config CHARGER_SGM41543
         tristate "SGM sgm41543 Charger"
         depends on I2C || COMPILE_TEST
