--- a/arch/arm64/boot/dts/sprd/battery/cancun-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/cancun-overlay.dtsi
@@ -216,13 +216,10 @@
 	/*Charge pump target charge current*/
 	cm-cp-taper-current = <1000000>;
 
-	//cm-chargers = "charger";
-	cm-chargers = "upm6920_charger";
+	cm-chargers = "charger";
+	//cm-chargers = "sgm41513_charger", "upm6920_charger";
 	//cm-charge-pumps = "bq2597x-standalone";
 	cm-fuel-gauge = "sc27xx-fgu";
-
-	cm-alt-charger-adapt-enable;
-	cm-alt-charger-power-supplys = "sgm41513_charger";
 
 	/* in deci centigrade */
 	cm-battery-cold = <200>;
@@ -252,9 +249,11 @@
 	/* when the safe charging voltage is exceeded, stop charging */
 	cm-charge-voltage-max = <6500000>;
 	cm-fast-charge-voltage-max = <10500000>;
+        cm-flash-charge-voltage-max = <12000000>;
 	/* drop voltage in microVolts to restart charging */
 	cm-charge-voltage-drop = <700000>;
 	cm-fast-charge-voltage-drop = <700000>;
+        cm-flash-charge-voltage-drop = <1000000>;
 
 	/* sprd_fchg parameter */
 	sprd,support-fchg;
@@ -268,13 +267,6 @@
 	phys = <&hsphy>;
 	pd-extcon-enable;
 	extcon = <&pmic_typec>, <&pmic_pd>;
-	use-typec-extcon;
-};
-
-&pmic_regulator {
-	vddvbus:otg-vbus {
-		regulator-name = "vddvbus";
-	};
 };
 
 &i2c5 {
@@ -283,25 +275,36 @@
 
 	status = "okay";
 
-	upm6920_chg: charger@6A {
+
+	upm6920_chg: charger@5A {
 		compatible = "up,upm6920_chg";
-		reg = <0x6A>;
+		reg = <0x5A>;
+                phys = <&hsphy>;
 		monitored-battery = <&bat &bat2 &bat3>;
+                extcon = <&extcon_gpio>;
 		irq-gpio = <&ap_gpio 115 GPIO_ACTIVE_LOW>;
-		disable-otg-wdg-in-sleep;
 		use-typec-extcon;
-		otg-vbus-node-external;
 	};
 
 	sgm41513_chg: charger@3B {
                 compatible = "sgm,sgm41513_chg";
                 reg = <0x3B>;
+                phys = <&hsphy>;
                 monitored-battery = <&bat &bat2 &bat3>;
+                extcon = <&extcon_gpio>;
                 irq-gpio = <&ap_gpio 115 GPIO_ACTIVE_LOW>;
-		disable-otg-wdg-in-sleep;
 		use-typec-extcon;
-		otg-vbus-node-external;
         };
+
+	sc89890_chg: charger@6A {
+		compatible = "sc,sc8989x_chg";
+		reg = <0x6A>;
+                phys = <&hsphy>;
+		monitored-battery = <&bat &bat2 &bat3>;
+                extcon = <&extcon_gpio>;
+		irq-gpio = <&ap_gpio 115 GPIO_ACTIVE_LOW>;
+		use-typec-extcon;
+	};
 
 	/*bq2560x_chg: charger@6b {
 		compatible = "ti,bq2560x_chg";
@@ -312,6 +315,7 @@
 			regulator-name = "vddvbus";
 		};
 	};*/
+
 };
 
 &pmic_fgu {
@@ -328,8 +332,6 @@
 	sprd,capacity-sleep-calibration;
 
 	sprd,capacity-boot-calibration;
-	use-typec-extcon;
-	extcon = <&pmic_typec>;
 };
 
 &pmic_fchg {
@@ -339,17 +341,15 @@
 
 &pmic_pd {
 	status = "okay";
-	vbus-supply = <&vddvbus>;
-	use-pdhub-c2c;
 	sprd,syscon-aon-apb = <&aon_apb_regs>;
 	usb_con: connector {
 		compatible = "usb-c-connector";
 		label = "USB-C";
 		power-role = "dual";
 		try-power-role = "sink";
-		source-pdos = <PDO_FIXED(5000, 400, PDO_FIXED_USB_COMM |
-				PDO_FIXED_DUAL_ROLE | PDO_FIXED_DATA_SWAP)>;
-		sink-pdos = <PDO_FIXED(5000, 3000, PDO_FIXED_USB_COMM)>;
+		source-pdos = <PDO_FIXED(5000, 400, PDO_FIXED_USB_COMM)>;
+		sink-pdos = <PDO_FIXED(5000, 3000, PDO_FIXED_USB_COMM)
+				PDO_PPS_APDO(3300, 11000, 3000)>;
 		op-sink-microwatt = <10000000>;
 	};
 };
