--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
@@ -70,7 +70,7 @@
 		novatek,spi-rd-fast-addr = <0x03F310>;
 
 		/* MP */
-		//novatek,mp-support-dt;
+		novatek,mp-support-dt;
 
 		#include "nvt-touchscreen-novatek-nt36xxx-spi.dtsi"
 	};
