[issue][TP][EKissue-10173][ILI9883C]Fix Eic Interrupt[DEV][2/2]
[rootcasuse]:Eic Interrupt Invalid.
[solution]:Fix Eic.
[sideeffect]:NA.
[others]:NA.

Change-Id: I67758f1d2449b88b473e120815074116d63a7507
(cherry picked from commit 37cddae2c40aa752cd880e98e39c7e1a3bf3b193)

--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9230-spi3-gpio144-145-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9230-spi3-gpio144-145-tp.dtsi
@@ -94,6 +94,9 @@
 		touch,reset-gpio = <&ap_gpio 145 GPIO_ACTIVE_HIGH>;
 		touch,irq-gpio = <&ap_gpio 144 GPIO_ACTIVE_HIGH>;
 		touch,eic-irq-gpio = <&eic_async 16 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "tp_extconf0","tp_extconf1";
+		pinctrl-0 = <&tp_extconf0>;
+		pinctrl-1 = <&tp_extconf1>;
 		/***************omnivision*****************/
 		omnivision,reset-gpio = <&ap_gpio 145 GPIO_ACTIVE_LOW>;
 		omnivision,irq-gpio = <&ap_gpio 144 GPIO_ACTIVE_LOW>;
@@ -124,5 +127,15 @@
 		//novatek,mp-support-dt;
 
 		#include "nvt-touchscreen-novatek-nt36xxx-spi.dtsi"
+	};
+};
+&pin_controller {
+	tp_extconf0: extint0 {
+		pins = "QOGIRL6_EXTINT0";
+		function = "func1";
+	};
+	tp_extconf1: gpio {
+		pins = "QOGIRL6_EXTINT0";
+		function = "func4";
 	};
 };
