[issue][NFC][EKissue-1009]Optimize the nfc clock and solve the i2c problem
[rootcause]:nfc bring up
[solution]:nfc bring up
[sideeffect]:no
[others]:no

Change-Id: I8c634d8f279e1ab6213d19a17a1ba0741504e7c9

--- a/arch/arm64/boot/dts/sprd/cancun-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/cancun-overlay.dts
@@ -323,7 +323,7 @@
         reset-gpios = <&ap_gpio 63 0x00>;
         irq-gpios = <&ap_gpio 126 0x00>;
         // pidle-gpios = <&ap_gpio 48 0x00>;
-        clkreq-gpios = <&ap_gpio 60 0x00>;
+        //clkreq-gpios = <&ap_gpio 60 0x00>;
         //clocks = <&clock_rpmh RPMH_RF_CLK3>;
         clock-names = "nfc_ref_clk","source","enable";
         //st,clk_pinctrl;
