EKMOTO-4215:TP:input-boost function adapt<2> Bug #2624887 unisoc_platform: sched: add input_boost feature
[root cause  ]: boost frequency when there is touch input
[changes     ]: add input_boost feature
[side effects]: no
[self test   ]: yes
[download normally]:yes
[power on/off normally]:yes
[do common repository/branch inspection]:yes
[is there dependence]:no
[confirm dependent commit]:na
[board]:ums9620
[test case]:freq check when touch the screen
[reviewers]:Xuewen Yan

commit_template_version:v1
To improve fluency performace, boost cpu frequency when there
is touch input on screen.

This feature adds a FREQ_QOS_MIN cpu freq qos for frequency
boosting, adds a input handler to handle the input signal, add
some sysctl nodes for user setting.

Change-Id: Iba40db792dde3787ebec214f010e7890a17838cc
Signed-off-by: Di Shen <di.shen@unisoc.com>
Reviewed-on: https://gerrit-odm.mot.com/c/home/repo/dev/platform/android/unisoc/bsp/kernel5.15/kernel5.15/+/740
Tested-by: gerrito
Tested-by: zhigang he <zhigang.he@chino-e.com>
Tested-by: shitao chen <shitao.chen@chino-e.com>
Reviewed-by: shitao chen <shitao.chen@chino-e.com>
Reviewed-by: zhigang he <zhigang.he@chino-e.com>

--- a/drivers/unisoc_platform/sched/Kconfig
+++ b/drivers/unisoc_platform/sched/Kconfig
@@ -149,6 +149,16 @@ config UNISOC_CPU_NETLINK
 	  If you do not use unisoc android framework, or you do not want to receive
 	  the messege, turn off it.
 
+config UNISOC_INPUT_BOOST
+	bool "Support input cpufreq boost"
+	depends on UNISOC_SCHED && CPU_FREQ
+	default n
+	help
+	  Support input boost feature.
+	  If enable this feature, the cpu minimum frequency would be fixed as the
+	  user setting when there are input signal from screen touch, and it would
+	  restore to the original value after a while.
+
 config UNISOC_WORKAROUND_L3_HANG
 	bool "workaround sharkl3 32b cpu hang"
 	depends on UNISOC_SCHED && ARM
