--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -527,7 +527,7 @@
 		aw99703,switch-freq = <1>; /* 1000kHz(default) */
 		aw99703,auto-freq-high = <0x80>;
 		aw99703,auto-freq-low = <0x10>;
-		aw99703,bl-fscal-led = <0x17>; /* 23.2mA(default) */
+		aw99703,bl-fscal-led = <0x1C>; /* 27.2mA(default) */
 		aw99703,bl-channel = <3>;
 		aw99703,turn-on-ramp = <0x04>; /* 8ms(default) */
 		aw99703,turn-off-ramp = <0x04>; /* 8ms(default) */
