EKMOTO-1373:LCM:Optimize nt36528_dj timming<1>
Change-Id: Idb008e45965191e7a248fcf58d05a889300d4ea0

--- a/arch/arm64/boot/dts/sprd/lcd/lcd_nt36528_dj_120hz_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_nt36528_dj_120hz_mipi_hd.dtsi
@@ -22,7 +22,7 @@
 					sprd,video-lp-cmd-enable = <1>;
 					sprd,hporch-lp-disable = <1>;
 
-					sprd,reset-on-sequence = <1 15>, <0 5>, <1 15>;
+					sprd,reset-on-sequence = <0 5>, <1 10>, <0 5>, <1 15>;
 					sprd,reset-off-sequence = <1 10>;
 
 					sprd,initial-command = [
