EKMOTO-1223: bsp: Extended memory solution provided by moto[1/3]
Change-Id: Id15d239d78beb724dd7abb3162f573e76c405a89

--- a/arch/arm64/configs/gki_defconfig
+++ b/arch/arm64/configs/gki_defconfig
@@ -38,6 +38,15 @@ CONFIG_RELAY=y
 # CONFIG_RD_XZ is not set
 # CONFIG_RD_LZO is not set
 CONFIG_BOOT_CONFIG=y
+#ramboot config start
+CONFIG_HYBRIDSWAP=y
+CONFIG_HYBRIDSWAP_ZRAM=m
+# CONFIG_HYBRIDSWAP_ZRAM_WRITEBACK is not set
+# CONFIG_HYBRIDSWAP_ZRAM_MEMORY_TRACKING is not set
+CONFIG_HYBRIDSWAP_SWAPD=y
+CONFIG_HYBRIDSWAP_CORE=y
+# CONFIG_HYBRIDSWAP_ASYNC_COMPRESS is not set
+#ramboot config end
 # CONFIG_SYSFS_SYSCALL is not set
 # CONFIG_FHANDLE is not set
 CONFIG_KALLSYMS_ALL=y
