[issue][RAMBOOST][EKissue-1828] update ramboost code to new [1/2]
[rootcause]:add moto ramboost code
[solution]:add moto ramboost code for debug some issue
[sideeffect]:null
[others]:null

Change-Id: I2115f625807c670be4f4b2a1b4ff55e47fdfbfd6
Signed-off-by: chenchangan <chenchangan@longcheer.com>
(cherry picked from commit e135fb907e890afa82f4ec77e492a2ea2f2117b9)

--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -117,6 +117,7 @@ obj-$(CONFIG_W1)		+= w1/
 obj-y				+= power/
 obj-y				+= moto_ko/moto_mm/
 obj-y				+= moto_ko/moto_swap/
+obj-y                          += moto_ko/moto_mmap_fault/
 obj-$(CONFIG_HWMON)		+= hwmon/
 obj-$(CONFIG_THERMAL)		+= thermal/
 obj-$(CONFIG_WATCHDOG)		+= watchdog/
