--- a/drivers/Kconfig
+++ b/drivers/Kconfig
@@ -85,6 +85,8 @@ source "drivers/moto_ko/moto_mm/Kconfig"
 
 source "drivers/moto_ko/moto_swap/Kconfig"
 
+source "drivers/moto_ko/moto_mmap_fault/Kconfig"
+
 source "drivers/hwmon/Kconfig"
 
 source "drivers/thermal/Kconfig"
