--- a/arch/arm64/boot/dts/sprd/ump9620/regulator.dtsi
+++ b/arch/arm64/boot/dts/sprd/ump9620/regulator.dtsi
@@ -129,6 +129,7 @@
 			regulator-min-microvolt = <1200000>;
 			regulator-max-microvolt = <3750000>;
 			regulator-ramp-delay = <25000>;
+                        regulator-always-on;
 		};
 
 		vddsim0: LDO_VDDSIM0 {
