--- a/arch/arm64/boot/dts/sprd/lcd/lcd_ili9883c_txd_120hz_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_ili9883c_txd_120hz_mipi_hd.dtsi
@@ -26,6 +26,7 @@
 					sprd,reset-off-sequence = <1 10>;
 
 					sprd,need-execute-shutdown;
+					sprd,video-lp-en-mode = <11>;
 					sprd,initial-command = [
 						39 00 00 04 FF 98 83 06
 						39 00 00 02 3E E2
