[EKMOTO-1212][Camera 8M][1ST][信利][GC08A8]bring up
St-result:PASS

add dts files

Change-Id: I0a1c3c442773c7cef92c46b5970fe6e6e4e1016c

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -448,10 +448,10 @@
 			<&g5l_pll CLK_TGPLL_51M2>,<&g5l_pll CLK_TGPLL_48M>,<&ext_26m>;
 		vddio-supply = <&vddcamio>;
 		vddcama-supply = <&vddcama2>;
-		//vddcamd-supply = <&vddcamd2>;
+		vddcamd-supply = <&vddcamd2>;
 		reset-gpios = <&ap_gpio 41 0>;
 		//power-down-gpios = <&ap_gpio 48 0>;
-		sprd,phyid = <6>;
+		sprd,phyid = <3>;
 		csi = <&csi3>;
 	};
 };
