EKMOTO-1581:sar usb and headset pulg
Change-Id: Ia3fa32e61b0e2b1ee82f65d641865b5c8d658d5f

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -779,6 +779,8 @@
 		//vcc0-supply = <&pm660l_l4>;
 		channel_use_flag = <0x1f>;
 		aw_sar,update_fw;
+                aw_sar,use_plug_cail;
+                aw_sar,use_headset_plug_cail;
 		/* private node belongs to aw963xx */
 		start-mode = < 1 >; // 0: start in rom  1: start in ram
 		irq-mux = < 2 >; // set csx as irq pin. config this field when connect to aw96308/aw96310
