EKMOTO-1698:24-03 Monthly patch (2/19)
Description:
cherry-pick for Moto branch rename
PATCH20007757
2024-3_5_2522425:

Modem NV encryption config.

Change-Id: Ie76e8cadd8c920e693b9f959ca7b6f1e572c66cd

--- a/arch/arm64/boot/dts/sprd/ums9620/efuse.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9620/efuse.dtsi
@@ -144,12 +144,12 @@
 			bits = <0 8>;
 		};
 
-		uid_end: uid-end@e8{
-			reg = <0xc8 0x4>;
+		uid_end: uid-end@c4{
+			reg = <0xc4 0x4>;
 		};
 
-		uid_start: uid-start@ec{
-			reg = <0xc4 0x4>;
+		uid_start: uid-start@c8{
+			reg = <0xc8 0x4>;
 		};
 
 	};
