EKMOTO-2020:TP:Optimize tcl_td4160 sleep wake-up timing<3>
Change-Id: Idb6d9b4147974f16fa8a124b301b489f02b7a58b

--- a/arch/arm64/boot/dts/sprd/lcd/lcd_td4160_tcl_120hz_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_td4160_tcl_120hz_mipi_hd.dtsi
@@ -24,6 +24,8 @@
 
 					sprd,reset-on-sequence = <1 15>, <0 5>, <1 15>;
 					sprd,reset-off-sequence = <0 10>;
+					ontim,tp-reset-flag;
+					sprd,need-execute-shutdown;
 
 					sprd,initial-command = [
 						15 00 00 02 B0 04
