EKMOTO-1745 kernel: set qc2.0 fail
Change-Id: Id2e90c54ec29dcf36e3e62cf5e57a03f74cd61d3

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -241,18 +241,21 @@
 				io-channels = <&pmic_adc 30>, <&pmic_adc 31>;
 				io-channel-names = "dp", "dm";
 				dpdm-gpio = <&ap_gpio 149 GPIO_ACTIVE_LOW>;
+				vdd-supply = <&vddusb33>;
 			};
 			hl7015qc_chg: hl7015qc {
 				compatible = "hl,hl7015qc_chg";
 				io-channels = <&pmic_adc 30>, <&pmic_adc 31>;
 				io-channel-names = "dp", "dm";
 				dpdm-gpio = <&ap_gpio 149 GPIO_ACTIVE_LOW>;
+				vdd-supply = <&vddusb33>;
 			};
 			upm6920qc_chg: upm6920qc {
 				compatible = "uni,upm6920qc_chg";
 				io-channels = <&pmic_adc 30>, <&pmic_adc 31>;
 				io-channel-names = "dp", "dm";
 				dpdm-gpio = <&ap_gpio 149 GPIO_ACTIVE_LOW>;
+				vdd-supply = <&vddusb33>;
 			};
 		};
 	};
