--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
@@ -18,7 +18,7 @@
 		spi-max-frequency = <8000000>;	//4800000,9600000,15000000,19200000
 
 		/*------------------omnivision_td4375_spi------------------*/
-		omnivision,irq-gpio = <&eic_async 16 GPIO_ACTIVE_HIGH>; /* IRQF_ONESHOT | IRQF_TRIGGER_LOW */
+		omnivision,irq-gpio = <&ap_gpio 13 GPIO_ACTIVE_HIGH>; /* IRQF_ONESHOT | IRQF_TRIGGER_LOW */
 		omnivision,irq-on-state = <0>;
 		omnivision,reset-gpio = <&ap_gpio 14 GPIO_ACTIVE_HIGH>;
 		omnivision,reset-on-state = <0>;
@@ -32,7 +32,7 @@
 		omnivision,ubl-byte-delay-us = <20>;
 
 		/*ilitek start*/
-		touch,irq-gpio = <&eic_async 16 GPIO_ACTIVE_HIGH>;
+		touch,irq-gpio = <&ap_gpio 13 GPIO_ACTIVE_HIGH>;
 		touch,reset-gpio = <&ap_gpio 14 GPIO_ACTIVE_HIGH>;
 		/*ilitek end*/
 
@@ -61,7 +61,7 @@
 		//novatek,wgp-stylus;
 
 		novatek,reset-gpio = <&ap_gpio 14 GPIO_ACTIVE_HIGH>;
-		novatek,irq-gpio = <&eic_async 16 GPIO_ACTIVE_HIGH>;
+		novatek,irq-gpio = <&ap_gpio 13 GPIO_ACTIVE_HIGH>;
 		/* 525 */
 		//novatek,swrst-n8-addr = <0x01F01A>;
 
