--- a/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
+++ b/arch/arm64/boot/dts/sprd/touchscreen/ums9620-spi1-gpio13-14-tp.dtsi
@@ -33,7 +33,11 @@
 
 		/*ilitek start*/
 		touch,irq-gpio = <&ap_gpio 13 GPIO_ACTIVE_HIGH>;
+		touch,eic-irq-gpio = <&eic_async 16 GPIO_ACTIVE_HIGH>;
 		touch,reset-gpio = <&ap_gpio 14 GPIO_ACTIVE_HIGH>;
+		pinctrl-names = "tp_extconf0","tp_extconf1";
+		pinctrl-0 = <&tp_extconf0>;
+		pinctrl-1 = <&tp_extconf1>;
 		/*ilitek end*/
 
 		/*------------------focaltech_ft8756------------------*/
@@ -73,5 +77,18 @@
 		novatek,mp-support-dt;
 
 		#include "nvt-touchscreen-novatek-nt36xxx-spi.dtsi"
+	};
+};
+
+&pin_controller {
+
+	tp_extconf0: extint0 {
+		pins = "QOGIRN6PRO_EXTINT0";
+		function = "func1";
+	};
+
+	tp_extconf1: gpio {
+		pins = "QOGIRN6PRO_EXTINT0";
+		function = "func4";
 	};
 };
