--- a/arch/arm64/boot/dts/sprd/lcd/lcd_td4160_tcl_120hz_mipi_hd.dtsi
+++ b/arch/arm64/boot/dts/sprd/lcd/lcd_td4160_tcl_120hz_mipi_hd.dtsi
@@ -26,6 +26,7 @@
 					sprd,reset-off-sequence = <0 10>;
 					ontim,tp-reset-flag;
 					sprd,need-execute-shutdown;
+					sprd,video-lp-en-mode = <11>;
 
 					sprd,initial-command = [
 						15 00 00 02 B0 04
