EKMOTO-2035: bsp: add keyin1 as volume down key
Change-Id: I29dc583f006e8c779b3015a4af228741e8733eb3

--- a/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
+++ b/arch/arm64/boot/dts/sprd/ums9620-2h10_manila-overlay.dts
@@ -61,6 +61,16 @@
 			model = "Spreadtrum UMS9620 2H10 manila Board"; // ONTIM
 			sprd,sc-id = "ums9620 2h10 manila"; // ONTIM
 
+			gpio-keys {
+				key-volumedown-hmd {
+					label = "HMD Volume Down Key";
+					linux,code = <KEY_VOLUMEDOWN>;
+					gpios = <&ap_gpio 8 GPIO_ACTIVE_LOW>;
+					debounce-interval = <2>;
+					wakeup-source;
+				};
+			};
+
 			dtbo: dtbo {
 				compatible = "sprd,dtbo-test";
 				reg = <0x0 0x0 0x0 0x11>;
