MOTO: kernel remove battery ntc compensation
Change-Id: Id9931c5e6b7316e9cd80f60424cc3f36a586a77f

--- a/arch/arm64/boot/dts/sprd/battery/ums9620-2h10_manila-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/ums9620-2h10_manila-overlay.dtsi
@@ -396,7 +396,7 @@
 	monitored-battery = <&bat>,<&bat2>,<&bat3>;
 	fgu-cap-remap-table = <1 2 3>, <2 3 2>, <98 99 2>, <99 100 3>;
 	sprd,calib-resistance-micro-ohms = <4850>;
-	sprd,comp-resistance-mohm = <11>;
+//	sprd,comp-resistance-mohm = <11>;
 
 	fgu-capacity-track;
 	phys = <&ssphy>;
