[issueL][charger][EKissueLITE-5391]The OTG function is not available
[rootcause]:Unable to identify OTG
[solution]:Modify the charging IC and device number parameters
[sideeffect]:none
[others]:none

Change-Id: Ie666c4e200a822e2901b20bb1c346ee1a777eb19

--- a/arch/arm64/boot/dts/sprd/battery/lion-overlay.dtsi
+++ b/arch/arm64/boot/dts/sprd/battery/lion-overlay.dtsi
@@ -222,7 +222,7 @@
 	cm-fuel-gauge = "sc27xx-fgu";
 
 	cm-alt-charger-adapt-enable;
-	cm-alt-charger-power-supplys = "sgm41513_charger";
+	cm-alt-charger-power-supplys = "sgm41513_charger" , "sc89890_charger";
 
 	/* in deci centigrade */
 	cm-battery-cold = <200>;
