[issue][ufs][EKissue-1956]Bug #2477561 scsi: ufs: ums9230 record mphy info && regulator
[rootcause]:record mphy info when ufs is error
[solution]:2023-12_14_2477561 of PATCH20007456
[sideeffect]:null
[others]:null

Change-Id: I3919dbf10695ae472df8e54a7db5f122e603f4e8

--- a/arch/arm64/boot/dts/sprd/ums9230/ums9230.dtsi
+++ b/arch/arm64/boot/dts/sprd/ums9230/ums9230.dtsi
@@ -475,6 +475,11 @@
 				compatible  = "sprd,ufshc-ums9230";
 				vcc-supply = <&vddemmccore>;
 				vcc-fixed-regulator;
+				vdd-vddgen0-supply = <&vddgen0>;
+				vdd-avdd12-supply = <&avdd12>;
+				vdd-avdd18-supply = <&avdd18>;
+				vdd-vddcore-supply = <&vddcore>;
+				vdd-vddmodem-supply = <&vddmodem>;
 				clock-names = "ufs_reg_eb", "ufs_en",
 					      "ufs_pclk", "ufs_hclk";
 				clocks = <&apapb_gate CLK_UFS_REG_EB>,
